// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button On a contrast area 1`] = `
<div
  className="sc-gZMcBi huJyDB"
>
  <div
    className="sc-bwzfXH dhQYPC"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-bwzfXH bFmMmv"
      >
        <div
          className="sc-bwzfXH fuEFtX"
        >
          <button
            className="sc-htoDjs dmMyib"
            color={undefined}
            disabled={false}
            icon={undefined}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            Click me
          </button>
        </div>
        <div
          className="sc-bwzfXH fuEFtX"
        >
          <button
            className="sc-htoDjs jKHdGr"
            color={undefined}
            disabled={undefined}
            icon={undefined}
            id={undefined}
            onClick={[Function]}
            title="Click me"
            type="button"
          >
            <span
              aria-hidden={true}
              className="sc-iwsKbI jSMqMr"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "test-file-stub",
                }
              }
              role="img"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button With an icon 1`] = `
<button
  className="sc-htoDjs gdufTA"
  color={undefined}
  disabled={false}
  icon="keyboard"
  id={undefined}
  onClick={[Function]}
  title="Press any key to continue"
  type="button"
>
  Press any key to continue
  <span
    className="sc-htpNat fimblC"
  >
    <span
      aria-hidden={true}
      className="sc-iwsKbI jSMqMr"
      dangerouslySetInnerHTML={
        Object {
          "__html": "test-file-stub",
        }
      }
      role="img"
    />
  </span>
</button>
`;

exports[`Storyshots Button With text 1`] = `
<button
  className="sc-htoDjs ilyuMW"
  color={undefined}
  disabled={false}
  icon={undefined}
  id={undefined}
  onClick={[Function]}
  title="Click me"
  type="button"
>
  Click me
</button>
`;
